# ComfyUI-360Panoramas

./: .gitignore  LICENSE  README.md  __init__.py  panorama_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish-comfy-registry.yml
locales/zh/: main.json  nodeDefs.json
web/: panorama_preview.js
